Line and EdgeDrawer